# rust_lambda

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cdk.json  rustfmt.toml
aws_deployment/Rustlamb/: Program.cs  Rustlamb.csproj  RustlambStack.cs
aws_deployment/Rustlamb/Resources/: RustlambVpc.cs
aws_deployment/Rustlamb/Resources/Functions/: HelloWorldHandler.cs
rustlamb_common/: Cargo.toml
rustlamb_hello_world/: Cargo.toml
rustlamb_hello_world/src/: main.rs
