[package]
name = "rustlamb_hello_world"
version = "0.1.0"
authors = ["Jake Thompson <jake@zenlist.com>"]
edition = "2018"

[dependencies]
rustlamb_common = { path = "../rustlamb_common" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
aws_lambda_events = "0.2"

log = "0.4"
thiserror = "1.0"

tokio = "0.2"
futures = "0.3"

simple_logger = "1.6"

